--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  background: -webkit-linear-gradient(225deg,#ff9966,#ff5e62);
+  background: -webkit-linear-gradient(225deg,#0fb8ad,#2cb5e8);
 }
 #outer #container {
   background-color: #f3f3f3;
