--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 }
 #outer #container {
   background-color: #f3f3f3;
-  color: #ff5e62;
+  color: #000000;
   padding: 15px 25px;
   width: 100%;
   max-width: 500px;
