--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: "Whitney SSm A", "Whitney SSm B", "Helvetica Neue", Helvetica, Arial, Sans-Serif;
-      background-color: #2cb5e8;
+      background: -webkit-linear-gradient(225deg,#0fb8ad,#2cb5e8);
       color: #fff;
       -moz-font-smoothing: antialiased;
       -webkit-font-smoothing: antialiased;
