--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,6 +6,7 @@
     <!--link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons"-->
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <title>front-end</title>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
