--Done 1. Added landing paged --Left 1.  Need to add ajx to verify token 2. Display user details after verification

--- a/LoginDemo/index.html
+++ b/LoginDemo/index.html
@@ -100,7 +100,7 @@
 				}),
 				dataType: 'json',
 				success: function (data) {
-					successPath = 'file:///Users/taherPardawala/Desktop/Projects/nodePracs/be-proj/LoginDemo/nextPage.html'
+					successPath = 'file:///Users/taherPardawala/Desktop/Projects/nodePracs/be-proj/LoginDemo/Snow%20-%20By%20Visual%20Soldiers/index.html'
 					unSuccessPath = 'file:///Users/taherPardawala/Desktop/Projects/nodePracs/be-proj/LoginDemo/index.html'
 					window.location.replace(`http://localhost:8080/#/authprogress/intermediatepage?sessionId=${data.token}&onSuccessPath=${successPath}&onUnsuccessPath=${unSuccessPath}`);
 				}
