--- a/LoginDemo/index.html
+++ b/LoginDemo/index.html
@@ -101,7 +101,7 @@
 				success: function (data) {
 					successPath = 'https://beproject.tk/testwebsite/landingpage'
 					unSuccessPath = 'https://beproject.tk/404'
-					window.location.replace(`http://localhost:8080/#/authprogress/intermediatepage?sessionId=${data.token}&onSuccessPath=${successPath}&onUnsuccessPath=${unSuccessPath}`);
+					window.location.replace(`https://beproject.tk/#/authprogress/intermediatepage?sessionId=${data.token}&onSuccessPath=${successPath}&onUnsuccessPath=${unSuccessPath}`);
 				}
 			});
 		}
