--- a/LoginDemo/Snow - By Visual Soldiers/index.html
+++ b/LoginDemo/Snow - By Visual Soldiers/index.html
@@ -17,7 +17,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.css">
-  <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900|Montserrat:400,700' rel='stylesheet'
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900|Montserrat:400,700' rel='stylesheet'
     type='text/css'>
 
 
@@ -321,6 +321,9 @@
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   <script>
+      window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
+    </script>
+  <script>
     var sessionId = new URLSearchParams(window.location.search).get('sessionId');
     console.log(sessionId);
     if(!sessionId){
@@ -339,9 +342,7 @@
     }
   </script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script>
-    window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
-  </script>
+  
   <script src="js/wow.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
