--- a/LoginDemo/Snow - By Visual Soldiers/index.html
+++ b/LoginDemo/Snow - By Visual Soldiers/index.html
@@ -25,6 +25,32 @@
   <link rel="stylesheet" href="css/main.css">
 
   <script src="js/modernizr-2.7.1.js"></script>
+  <script>
+      window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
+    </script>
+  <script>
+    var sessionId = new URLSearchParams(window.location.search).get('sessionId');
+    console.log(sessionId);
+    if(!sessionId){
+      alert('Session ID missing')
+      window.location.replace('https://beproject.tk/404');
+    } else {
+      $.ajax({
+          url: 'https://beproject.tk/auth/v0.1/getAuthState',
+          type: 'GET',
+          contentType: 'application/json',
+          beforeSend: function(xhr){xhr.setRequestHeader('sessionid', sessionId);},
+          success: function (data) {
+            if(data.result[0]){
+
+            } else {
+              alert("Your authentication has failed");
+              window.location.replace('https://beproject.tk/404');
+            }
+          }
+      })
+    }
+  </script>
 
 </head>
 
@@ -320,27 +346,6 @@
   <!-- Javascript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script>
-      window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
-    </script>
-  <script>
-    var sessionId = new URLSearchParams(window.location.search).get('sessionId');
-    console.log(sessionId);
-    if(!sessionId){
-      alert('Session ID missing')
-      window.location.replace('https://beproject.tk/404');
-    } else {
-      $.ajax({
-          url: 'https://beproject.tk/auth/v0.1/getAuthState',
-          type: 'GET',
-          contentType: 'application/json',
-          beforeSend: function(xhr){xhr.setRequestHeader('sessionid', sessionId);},
-          success: function (data) {
-            console.log(data);
-          }
-      })
-    }
-  </script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   
   <script src="js/wow.min.js"></script>
