--- a/test/totp/index.html
+++ b/test/totp/index.html
@@ -45,7 +45,7 @@
                 document.querySelector('.otp-countdown').innerHTML = step - count + 's';
             }             
         } else {
-            alert("Invalid token!!");
+            window.location.replace('https://beproject.tk/404')
         }
             
     </script>
