--- a/AuthFail/index.html
+++ b/AuthFail/index.html
@@ -60,7 +60,7 @@
                     </div>
                 
                     <div class="buttons">
-                        <a class="button" href="https://beproject.tk/landingpage/login">Go back to Login Page</a>
+                        <a class="button" href="https://beproject.tk/testwebsite/login">Go back to Login Page</a>
                     </div>
                 </div>
             
