--- a/LoginDemo/blankPage/index.html
+++ b/LoginDemo/blankPage/index.html
@@ -8,10 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
   <link rel="stylesheet" href="css/style.css">
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script>
-    window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
-  </script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
 <script>
   var sessionId = new URLSearchParams(window.location.search).get('sessionId');
   console.log(sessionId);
