added styling to imAuth \

--- a/LoginDemo/index.html
+++ b/LoginDemo/index.html
@@ -60,7 +60,8 @@
 					</div>
 
 					<div class="text-center p-t-12">
-						<a class="txt3" href="javascript:callAuth()">
+						<br>
+						<a style="border: 1px solid #000000; padding: 10px 60px 10px 60px;border-radius: 3px;"class="txt3" href="javascript:callAuth()">
 							Login With imAuth
 						</a>
 					</div>
